Update Spring and JDK version